--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://LoganPickart.github.io/LoganPickart.github.io",
+  "homepage": "https://LoganPickart.github.io/",
   "name": "portfoliowebsite",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "bootstrap": "^5.3.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
